# newprediksi

./: .env  .gitignore  .replit  main.py  pyproject.toml  replit.md
app/: __init__.py  config.py  models.py
app/blueprints/: __init__.py  admin.py  api.py  main.py
app/services/: ai_service.py  ml_service.py
app/utils/: phone_utils.py  search_utils.py
data/: base_prices.json  properties.json
models/: price_model.pkl
static/images/: 15eac44b-8096-4269-9436-3d783c1ac41e_b8440348-c2f9-4ec6-bf5c-a2d7b11d39bc.avif  356ca368-928f-4790-b91c-411ae60259e6_466c1270-2227-4779-8567-0722535daea8.avif  5a4f9186-b38f-436c-833a-bf4bbadae247_a8f1b3cf-0a68-4c13-879d-74a96d574b1f.avif  62b661ad-17ed-458a-82b6-60f136486c86_2b14aabb-5a70-4070-98a6-405fef35f331.avif  768302b1-1d1d-4eb2-9b14-947cc64a39dc_cambai_2.avif  7d3b9146-574d-4882-abba-199a1eacbe2a_cambai_3.avif  83554ab4-c70e-4814-b8e0-310d1c1b1f42_ea0cb2ca-2406-4702-b2a0-568afb2c488d.avif  897a3587-9c10-4b0a-a6dc-1eb0e954942e_cambai_1.avif  aed20381-c6c8-497f-a171-41618fe65b3d_bb84684e-b6cb-4202-8b32-01b4d69ee0c2.avif  cab334f8-b9e2-4f6a-b98f-c61ad28e153f_a6252fed-b0c6-4b5a-962e-f01b058045b0.avif  e36099f2-976c-4c14-a35c-84777a4cbfa5_75c5699d-9e7e-4c14-adb4-121366f89a46.avif  f3a11c6c-4155-4f50-b051-4f5162bc08cc_utara_2.avif
templates/: base.html  index.html  predict.html  properties.html  property_detail.html
templates/admin/: base.html  base_price_settings.html  dashboard.html  edit_property.html  predictions.html  properties.html  settings.html  sidebar.html
templates/admin/css/: admin_styles.html
(+2 files in other folders)
